# zero2prod

./: Cargo.toml  configuration.yaml  spec.yaml
.github/workflows/: audit-on-push.yaml  general.yaml  scheduled-audit.yaml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20221126233201_make_status_not_null_in_subscriptions.sql  20221126233359_create_subscriptions_token_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscription_confirm.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
